fixed horizontal scrolling, added ellipsis to sitename

--- a/styles/global.css
+++ b/styles/global.css
@@ -118,3 +118,7 @@ body {
     }
   }
 }
+
+.notion-collection {
+  max-width: 100vw;
+}
